# ansto-simplon-api

./: .drone.yml  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  main.py  parse_master_file.py  pyproject.toml  simulate_zmq_stream.py
ansto_simplon_api/: _version.py  config.py  main.py  parse_master_file.py  simulate_zmq_stream.py
ansto_simplon_api/master_file_examples/: example_1_master.h5
ansto_simplon_api/routes/ansto_endpoints/: README.md  ansto_endpoints.py  load_hdf5_files.py
ansto_simplon_api/routes/detector/: command.py  config.py
ansto_simplon_api/routes/status/: status.py
ansto_simplon_api/routes/stream/: config.py
ansto_simplon_api/schemas/: ansto_endpoints.py  configuration.py  status.py
examples/: loop_trigger.py  multitrigger.py  receiver.py  trigger_detector.py
hdf5_data/: ANSTOtest_303_data_000001.h5
schemas/: configuration.py
