[tool.poetry]
name = "ansto-simplon-api"
version = "0.2.2"
description = "Simulated simplon api"
authors = ["Francisco Hernandez Vivanco <hernandf@ansto.gov.au>",
           "Daniel Eriksson <daniele@ansto.gov.au>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.111.0"
numpy = "1.26.4"
pyzmq = "26.0.3"
h5py = "3.11.0"
hdf5plugin = "4.4.0"
uvicorn = "0.30.0"
lz4 = " 4.3.3"
tqdm = "4.66.4"
cbor2 = "5.6.3"
bitshuffle = "0.5.1"
requests = "2.32.3"
dectris-compression = "^0.3.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
flake8 = "^4.0.1"
black = "^22.1.0"
isort = "^5.10.1"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
